# vector-quantization

./: .gitignore  ORGANIZATION_SUMMARY.md  README.md  README.md.bak  example_sweeps_dbpedia100k.sh  pyproject.toml  requirements.txt  sweep
.claude/: CLEANUP_COMPLETE.md  SESSION_SUMMARY.md
bench/: ffd_speed.cpp
configs/: dbpedia_dev.yaml  msmarco_1m.yaml  msmarco_500k.yaml
docs/: DATASETS.md  DESIGN_AUDIT.md  MEMORY_OPTIMIZATIONS.md  METHODS.md  METRICS_GUIDE.md  MS_MARCO_STREAMING.md  PACE_SETUP.md  PARAMETER_SWEEP_GUIDE.md  QUICKSTART_PACE.md  REPOSITORY_STRUCTURE.md  RUNNING_ON_PACE.md  RUNNING_SWEEPS.md  SLURM_GUIDE.md  SLURM_SUPPORT_PLAN.md  USAGE.md
documentation/: ADDING_NEW_METHODS.md  DATASETS.md  README.md  SWEEP_EXAMPLES.md  USAGE.md
examples/: demo.py  demo_msmarco_streaming.py
logs/: benchmark_runs.db
notebooks/: approx_results.ipynb
results/: plot_approx.py  proto_kmeans1d.py  theory_approx.py  theory_counterexamples.py
scripts/: fix_pace_permissions.sh  msmarco_setup.sh  prep_msmarco_bench.py  prepare_msmarco_full.py  run_full_benchmark.py  run_remaining_benchmark.py  run_sweep.py
slurm/: benchmark.slurm  precompute_gt.slurm  sweep.slurm
tests/: test_exact_search.py  test_extended_rabitq.py  test_faiss_export.py  test_faiss_ivfpq.py  test_ffd_packing.py  test_flat_quantized.py  test_ivf_benchmark_saq.py  test_ivf_quantized.py  test_lvq_quantization.py  test_method_registry.py  test_method_registry_saq.py  test_no_placeholder_saq.py  test_opq_trains_on_rotated.py  test_performance_metrics.py  test_quantizer_adapters.py  test_saq.py  (+9 more)
(+101 files in other folders)
